# git-autometa

./: .gitignore  LICENSE  README.md  architecture.md  config.yaml  example-config.yaml  git-autometa  go.mod  go.sum  main.go  pyproject.toml
.cursor/: config.json
internal/cli/: config.go  config_test.go  create_pr.go  create_pr_test.go  root.go  start_work.go  start_work_test.go  status.go
internal/config/: config.go
internal/git/: git.go  git_test.go
internal/github/: client.go  client_test.go
internal/gitutils/: git.go
internal/jira/: client.go  client_test.go  issue.go
internal/markdown/: converter.go  converter_test.go
internal/secrets/: secrets.go
src/git_autometa/: __init__.py  config.py  git_utils.py  github_client.py  jira_client.py  jira_markdown_converter.py  main.py
templates/: pr_template.md
tests/: __init__.py  test_jira_client.py  test_jira_markdown_converter.py
